--- a/RAF/index.html
+++ b/RAF/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>RAFLOST_</title>
+    <title>RAFLOST 2020</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/RAFLOST_SAMPLRRR_STUFF.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/RAF.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -17,7 +17,7 @@
       <div id="gameContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Sigga Digital & Sean Ptrick O'Brien</div>
+        <div class="title">2020 © Sigríður Birna Matthíasdóttir & Sean Patrick O'Brien</div>
       </div>
     </div>
   </body>
